--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -3,3 +3,4 @@ default: --profile html_report --profile chrome
 html_report: --format progress --format html --out=features_report.html
 firefox: BROWSER=firefox
 chrome: BROWSER=chrome
+poltergeist: BROWSER=poltergeist
